--- a/package.json
+++ b/package.json
@@ -42,46 +42,41 @@
     "@emotion/styled": "^11.9.3",
     "@iconify/react": "^3.2.2",
     "@mui/material": "^5.8.6",
+    "@react-google-maps/api": "^2.18.1",
+    "axios": "^1.4.0",
     "change-case": "^4.1.2",
     "date-fns": "^2.28.0",
     "framer-motion": "^6.3.16",
+    "google-map-react": "^2.2.1",
     "history": "^5.3.0",
     "nprogress": "^0.2.0",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.44.3",
     "react-lazy-load-image-component": "^1.5.4",
+    "react-quill": "^2.0.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
     "simplebar": "^5.3.8",
     "simplebar-react": "^2.4.1",
     "stylis": "^4.1.1",
-    "stylis-plugin-rtl": "^2.1.1"
+    "stylis-plugin-rtl": "^2.1.1",
+    "swr": "^2.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/eslint-parser": "^7.18.2",
     "@svgr/webpack": "^6.2.1",
+    "@types/google-map-react": "^2.1.7",
     "@types/nprogress": "^0.2.0",
+    "@types/numeral": "^2.0.2",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/react-lazy-load-image-component": "^1.5.2",
-    "@typescript-eslint/eslint-plugin": "^5.30.3",
-    "@typescript-eslint/parser": "^5.30.3",
-    "eslint": "^8.19.0",
-    "eslint-config-airbnb": "19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-import-resolver-typescript": "^3.2.0",
-    "eslint-loader": "4.0.2",
-    "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   },
