--- a/package.json
+++ b/package.json
@@ -56,13 +56,16 @@
     "react-dropzone": "^14.2.3",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.44.3",
+    "react-image-lightbox": "^5.1.4",
     "react-lazy-load-image-component": "^1.5.4",
     "react-quill": "^2.0.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
+    "react-slick": "^0.29.0",
     "simplebar": "^5.3.8",
     "simplebar-react": "^2.4.1",
+    "slick-carousel": "^1.8.1",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "^2.1.1",
     "swr": "^2.1.5"
@@ -77,6 +80,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/react-lazy-load-image-component": "^1.5.2",
+    "@types/react-slick": "^0.23.10",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   },
