--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@iconify/react": "^3.2.2",
     "@mui/material": "^5.8.6",
     "@react-google-maps/api": "^2.18.1",
+    "autosuggest-highlight": "^3.3.4",
     "axios": "^1.4.0",
     "change-case": "^4.1.2",
     "date-fns": "^2.28.0",
@@ -74,6 +75,7 @@
     "@babel/core": "^7.18.6",
     "@babel/eslint-parser": "^7.18.2",
     "@svgr/webpack": "^6.2.1",
+    "@types/autosuggest-highlight": "^3.2.0",
     "@types/google-map-react": "^2.1.7",
     "@types/nprogress": "^0.2.0",
     "@types/numeral": "^2.0.2",
