--- a/package.json
+++ b/package.json
@@ -55,10 +55,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-full-screen": "^1.1.1",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.44.3",
     "react-image-lightbox": "^5.1.4",
     "react-lazy-load-image-component": "^1.5.4",
+    "react-player": "^2.12.0",
     "react-quill": "^2.0.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
