--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "@emotion/cache": "^11.9.3",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@hookform/resolvers": "^3.1.0",
     "@iconify/react": "^3.2.2",
-    "@mui/material": "^5.8.6",
+    "@mui/lab": "^5.0.0-alpha.133",
+    "@mui/material": "^5.13.4",
     "@react-google-maps/api": "^2.18.1",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.4.0",
@@ -50,6 +52,7 @@
     "framer-motion": "^6.3.16",
     "google-map-react": "^2.2.1",
     "history": "^5.3.0",
+    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
@@ -71,7 +74,8 @@
     "slick-carousel": "^1.8.1",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "^2.1.1",
-    "swr": "^2.1.5"
+    "swr": "^2.1.5",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
@@ -79,6 +83,7 @@
     "@svgr/webpack": "^6.2.1",
     "@types/autosuggest-highlight": "^3.2.0",
     "@types/google-map-react": "^2.1.7",
+    "@types/lodash": "^4.14.195",
     "@types/nprogress": "^0.2.0",
     "@types/numeral": "^2.0.2",
     "@types/react": "^18.0.14",
