--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "framer-motion": "^6.3.16",
     "google-map-react": "^2.2.1",
     "history": "^5.3.0",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "notistack": "^3.0.1",
     "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
