--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@iconify/react": "^3.2.2",
     "@mui/lab": "^5.0.0-alpha.133",
     "@mui/material": "^5.13.4",
+    "@mui/x-date-pickers": "^6.9.1",
     "@react-google-maps/api": "^2.18.1",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.4.0",
