--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "history": "^5.3.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
-    "notistack": "^3.0.1",
+    "notistack": "2.0.8",
     "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
